--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+client/node_modules/
+server/node_modules/
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
