--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,26 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest tests/gameLogic",
+    "test:integration": "jest tests/integration",
+    "test:bots": "jest tests/bots",
+    "test:all": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
     "cors": "^2.8.5",
-    "path": "^0.12.7"
+    "express": "^4.18.2",
+    "path": "^0.12.7",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "keywords": [
@@ -25,4 +36,4 @@
   ],
   "author": "Your Name",
   "license": "MIT"
-} 
+}
