--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:unit": "jest tests/gameLogic",
-    "test:integration": "jest tests/integration",
-    "test:bots": "jest tests/bots",
-    "test:all": "npm run test:unit && npm run test:integration"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -23,8 +16,6 @@
     "uuid": "^12.0.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "keywords": [
